--- a/style.css
+++ b/style.css
@@ -8,80 +8,113 @@
 .txt{
     font-family: 'Roboto', sans-serif;
 }
+
 nav{
     display: flex;
     flex-direction: column;
 }
 nav .blu{
     text-align: center;
-    padding: 10px;
-    color: #ffffffd8;
-    background-color: #070023;
-    font-size: 9px;
+    padding: 25px;
+    color: #ffffffc4;
+    background-color:  #000A66;
+    font-size: 13px;
+}
+nav .blu a{
+    color: #ffffffc4;
 }
 nav .white{
-    padding: 10px;
+    margin-top: 20px;
+    padding: 10px 55px;
+    display: flex;
+    justify-content: space-between;
 }
 nav .white .logo{
     position: relative;
+    width: 50%;
 }
 nav .white .logo .join{
     display: flex;
 }
 .g{
-    width: 30px;
+    width: 35px;
+    height: 29px;
 }
 .leam{
-    width: 25px;
-    height: 10px;
+    width: 30px;
+    height: 12px;
+    margin-top: 14px;
+}
+.line{
+    margin-top: 0;
+    width: 65px;
+    position: absolute;
+    top: 19px;
 }
 nav .menu{
     display: flex;
-    gap: 2rem;
+    gap: 2.5rem;
+    width: 50%;
+    /* margin-top: 50px; */
+    text-align: center;
 }
 nav .menu ul{
     display: flex;
     gap: 2rem;
     list-style: none;
+    margin-top: 15px;
 }
 nav .menu a{
     text-decoration: none;
     color: #070023;
-    font-size: 9px;
+    font-size: 20px;
 }
-nav .menu button
+nav .menu button{
+    background-color: #000A66;
+    color: #ffffffd8;
+    font-size: 13px;
+    border-radius: 28px;
+    /* width: 100px; */
+    /* height: 30px; */
+    padding: 15px 22px;
+}
 .txt{
-    padding-left: 50px;
+    padding-left: 17px;
+    margin-top: 60px;
 }
 .txt .all{
-    width: 30%;
+    width: 50%;
     padding: 40px;
 }
 .spark{
-    font-size: 9px;
+    font-size: 15px;
     padding-bottom: 20px;
+}
+.all h1{
+    font-size: 45px;
 }
 .txt .btn{
     padding: 15px 0;
     display: flex;
-    gap: 1rem;
+    gap: 2rem;
 }
 .btn .book{
-    width: 100px;
-    height: 30px;
+    width: 180px;
+    height: 50px;
 }
 .btn p{
-    padding-top:10px ;
-    font-size: 9px;
+    padding-top:15px ;
+    font-size: 15px;
 }
 .socials{
     display: flex;
-    gap: 2rem;
+    gap: 2.5rem;
     padding-top: 5px;
+    padding-left: 8px;
 }
 .socials img{
-    width: 7px;
-    height: 7px;
+    width: 12px;
+    height: 10px;
 }
 .and{
     width: 100%;
