--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 }
 
 nav{
+    font-family: 'Roboto', sans-serif;
     display: flex;
     flex-direction: column;
 }
@@ -35,6 +36,12 @@ nav .white .logo{
 }
 nav .white .logo .join{
     display: flex;
+}
+.rem{
+    display: none;
+}
+.icons{
+    display: none;
 }
 .g{
     width: 35px;
@@ -62,7 +69,8 @@ nav .menu ul{
     display: flex;
     gap: 2rem;
     list-style: none;
-    margin-top: 15px;
+    /* margin-top: 15px; */
+    align-items:center ;
 }
 nav .menu a{
     text-decoration: none;
@@ -80,7 +88,7 @@ nav .menu button{
 }
 .txt{
     padding-left: 17px;
-    margin-top: 60px;
+    margin-top: 60px auto;
 }
 .txt .all{
     width: 50%;
@@ -94,27 +102,37 @@ nav .menu button{
     font-size: 49px;
 }
 .txt .btn{
+    margin-top: 1rem;
     padding: 15px 0;
     display: flex;
     gap: 2rem;
 }
-.btn .book{
-    width: 180px;
-    height: 50px;
+.bg-btn{
+    background-color: #000A66;
+    color: #ffffffd8;
+    font-size: 13px;
+    border-radius: 28px;
+    padding: 15px 22px;
 }
-.btn p{
-    padding-top:15px ;
-    font-size: 15px;
+.no-bg-btn{
+   background: none;
+   display: flex;
+   align-items: center;
+   gap: 8px;
+   font-size: 16px;
+   line-height: 30px;
 }
 .socials{
     display: flex;
-    gap: 2.5rem;
+    gap: 4rem;
+    align-items: center;
     padding-top: 5px;
     padding-left: 8px;
+    margin-top:20px;
 }
 .socials img{
-    width: 12px;
-    height: 10px;
+    width: 18px;
+    height: 18px;
 }
 .and{
     width: 100%;
@@ -122,6 +140,9 @@ nav .menu button{
 .hand img{
     width: 100%;
     overflow: hidden;
+}
+.mobile{
+    display: none;
 }
 @media only screen and (max-width:600px){
     .txt{
@@ -136,13 +157,13 @@ nav .menu button{
     }
     nav .blu{
         text-align: center;
-        font-size: 8px;
+        font-size: 12px;
     }
-    .white .icons{
+    .icons{
         display: block;
     }
     .txt .all{
-        width: 90%;
+        width: 100%;
     }
     .all h1{
         font-size: 35px;
@@ -160,23 +181,4 @@ nav .menu button{
         display: block;
         overflow: hidden;
     }
-}
-@media only screen and (max-width:1440px){
-    .txt{
-    font-family: 'Roboto', sans-serif;
-}
-
-nav{
-    display: flex;
-    flex-direction: column;
-}
-.icons{
-    display: none ;
-}
-.rem{
-    display: none;
-}
-.mobile{
-    display: none;
-}
 }
